Updated Anne's version

--- a/BuildingQiO.tex
+++ b/BuildingQiO.tex
@@ -3,7 +3,7 @@
 %Section
 \section{Quantum Indistinguishability Obfuscation}
 \label{sec:QiO-Cliffords and more}
-In this section we provide definitions of equivalent quantum circuits and  Quantum Indistinguishability Obfuscation $Qi\mathcal{O}.$ In section \ref{QiO:Clifford-Circuits} we show how to construct $Qi\mathcal{O}$ for Clifford circuits. The first construction is based on a canonical form, and the second is based on the principle of gate teleportation.
+In this section, we provide definitions of equivalent quantum circuits and  Quantum Indistinguishability Obfuscation ($Qi\mathcal{O})$. In  \Cref{QiO:Clifford-Circuits}, we show how to construct $Qi\mathcal{O}$ for Clifford circuits. The first construction is based on a canonical form, and the second is based on the principle of gate teleportation.
 
 
 %\anote{Need some blah blah at the beginning of a section to say what we present in this section.}
